Fix spacing

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -35,6 +35,7 @@
 	}
 }
 
+
 /*
 	Solid State by HTML5 UP
 	html5up.net | @ajlkn
@@ -3341,7 +3342,7 @@
 	@media screen and (max-width: 980px) {
 
 		#wrapper > header {
-			padding: 11em 3em 7.375em 3em ;
+			padding: 5em 3em 1em 3em ;
 			background-size: auto, cover;
 			background-position: center, 0% 0%;
 			margin-bottom: -4.75em;
